[tool.poetry]
name = "envium"
version = "1.0.1"
description = ""
authors = ["Damian Krystkiewicz <damian.krystkiewicz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
toml = "^0.10.2"
dataclasses = { version = "*", python = ">=3.6, <3.7" }
pytest-cov = "^2.12.1"
mypy = "^0.910"
black = "^21.6b0"
types-dataclasses = "^0.1.5"
Jinja2 = "^3.0.1"
isort = "^5.9.3"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip = ["__init__.py", ".venv"]
