[tool.poetry]
name = "envium"
version = "1.1.0"
description = ""
authors = ["Damian Krystkiewicz <damian.krystkiewicz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
toml = "^0.10.2"
pytest-cov = "^2.12.1"
mypy = "^1.4.1"
black = "^23.3.0"
types-dataclasses = "^0.6.6"
Jinja2 = "^3.0.1"
isort = "^5.12.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip = ["__init__.py", ".venv"]
